--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
+    "assets": "^3.0.1",
     "axios": "^1.7.9",
     "echarts": "^5.6.0",
     "echarts-wordcloud": "^2.1.0",
     "file-saver": "^2.0.5",
     "pinia": "^2.2.6",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.5.13",
     "vue-cropper": "^1.1.4",
     "vue-echarts": "^7.0.3",
@@ -31,6 +37,8 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22.9.3",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@umijs/openapi": "^1.13.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
